Tarefa 10 -  Ingestão de Dados - usando Virtual threads, e nao ficou bom